# pyspark_dataclass_metadata

./: pyproject.toml
dataclass_metadata/: metadata_updater.py
pyspark_dataclass_metadata/: dataset_schema.py  metadata_updater.py
tests/generic/: dataclass.py
tests/metadata/: test_metadata_updater.py
