[tool.poetry]
name = "dataclass-metadata"
version = "0.1.0"
description = "Library used for getting metadata from Python dataclasses"
authors = ["Jean-Paul Goodwin <goodwinjeanpaul@outlook.fr>"]
license = "Apache-2.0 license"
readme = "README.md"
packages = [{include = "pyspark_dataclass_metadata"}]

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
